Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,3 +5,6 @@ stages:
   jobs:
   - job: TerraformInstallJob
     steps:
+    - task: TerraformInstaller@1
+      inputs:
+        terraformVersion: 'latest'
