Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,3 +8,8 @@ stages:
     - task: TerraformInstaller@1
       inputs:
         terraformVersion: 'latest'
+- stage: TFSec
+  jobs:
+  - job: TFSecJob
+    steps:
+
