--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,3 +15,16 @@ stages:
     - task: tfsec@1
       inputs:
         version: 'v1.26.0'
+- stage: TerraformInit
+  jobs:
+  - job: TerraformInitJob
+    steps:
+    - task: TerraformTask@5
+      inputs:
+        provider: 'azurerm'
+        command: 'init'
+        workingDirectory: '$(System.DefaultWorkingDirectory)/infra'
+        backendServiceArm: 'amiteshserviceconnection'
+        backendAzureRmStorageAccountName: 'pkdgstorage'
+        backendAzureRmContainerName: 'pkdgcontainer'
+        backendAzureRmKey: 'amitesh.terraform.tfstate'
